--- a/Mpps-frontend/src/modules/Home/Home.css
+++ b/Mpps-frontend/src/modules/Home/Home.css
@@ -1,5 +1,28 @@
-/* Home.css */
+/* Home.css
+
+/* Style the Home container */
+.Home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
 
 
+/* .Home .NavBar {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+} */
+/* Style the Home title */
+.Home h1 {
+    font-size: 2em;
+    color: #333;
+}
 
-/* Add your CSS styles here */
+/* Style the Home body content */
+.Home p {
+    font-size: 1.2em;
+    color: #666;
+} 
