structuring the home page

--- a/Mpps-frontend/src/App.css
+++ b/Mpps-frontend/src/App.css
@@ -1,18 +1,22 @@
-#root {
-  /* max-width: 1280px;
-  max-height: 100%; */
+import custom-colors.css
+
+
+/* #root {
+  max-width: 1280px;
+  max-height: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0.5rem;
   text-align: center;
-}
+  display: flex;
+}*/
 
 html,
 body {
-  box-sizing: border-box; /* Consistent box model behavior */
-  margin: 0; /* Remove default browser margins */
-  font-family: sans-serif; /* Basic font family */
-  font-size: 16px; /* Base font size */
-  line-height: 1.5; /* Basic line height */
-  /* height: 100%; */
-  /* width: 100%; */
+  box-sizing: border-box; 
+  margin: 0; 
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px; 
+  line-height: 1.5; 
+  height: 100%; 
+  width: 100%;
 }
