--- a/Mpps-frontend/src/components/NavBar/NavBar.css
+++ b/Mpps-frontend/src/components/NavBar/NavBar.css
@@ -1,4 +1,4 @@
-/* .navbar{
+ .navbar{
     background-color: #1a1a1a;
     color: white;
     padding: 0;
@@ -13,4 +13,54 @@
     width: 100%;
     z-index: 1000;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-} */
+}
+
+
+nav a{
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+nav li{
+    list-style: none;
+    flex-direction: row;
+
+
+}
+
+
+.Logo{
+    width: 50px;
+    height: 50px;
+    margin-left: 10px;
+}   
+
+.navbar a:hover{
+    color: #f2f2f2;
+}
+
+a.active{
+    color: #f2f2f2;
+}
+
+@media screen and (max-width: 600px){
+    .navbar{
+        flex-direction: column;
+        height: auto;
+    }
+    .Logo{
+        width: 30px;
+        height: 30px;
+    }
+}   
+
+
+
+
+
+.Logo{
+    width: 10%;
+    height: 10%;
+}
