--- a/Mpps-frontend/src/custom-colors.css
+++ b/Mpps-frontend/src/custom-colors.css
@@ -7,6 +7,7 @@
     --plain-white: #FFFFFF;
     --next-white: #F9F9F9;
     --plain-black: #000000;
+    --dark-blue: #2B3444;
     /* Define other custom colors */
   }
 
