--- a/Mpps-frontend/src/modules/Home/Home.css
+++ b/Mpps-frontend/src/modules/Home/Home.css
@@ -7,7 +7,7 @@
     /* align-items: center; */
     /* justify-content: center; */
     padding: 0px;
-    background-color: #DAE1D7;
+    background-color: var(--custom-bg-white);
     height: 100%;
     width: 100%;
 
