--- a/Mpps-frontend/src/App.css
+++ b/Mpps-frontend/src/App.css
@@ -37,3 +37,50 @@ body {
   box-shadow: 0px 5px 10px rgb(76, 217, 100, 0.5);
   z-index: 1;
 }
+
+.overlayBackdrop {
+  position: fixed; /* or 'absolute' */
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent black */
+  /* backdrop-filter: blur(5px); Blurry effect for the background */
+  /* backdrop-filter: blur(5px); Blurry effect for the background */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  z-index: 1000; /* Ensure it's above other content */
+}
+
+.formContainer {
+  border-radius: 30px;
+  background-color: var(--custom-white);
+  padding: 20px;
+  width: 80%;
+  max-width: 600px; /* Adjust based on your preference */
+  z-index: 1001; /* Above the backdrop */
+}
+
+
+.searchResultsList {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: -20px;
+  border-radius: 0 0 10px 10px;
+  z-index: 1000;
+  background-color: #fff;
+  box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+  max-height: 200px;
+  overflow-y: auto;
+  list-style-type: none;
+  padding: 5px;
+  margin: 0;
+  border: 3px solid var(--custom-white);
+}
+
+.searchResultsItem {
+  cursor: pointer;
+  padding: 5px 10px;
+}
